[package]
name = "leetcode-template"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
scraper = "0.21.0"
anyhow = "1.0.93"
thiserror = "2.0.3"
